refactor: RefreshTokenValidator를 컴포넌트화하고 오류 details 확장